@startuml

class newick.Node extends DrawableNode {
    - name : String
    weight : double
    children : List<Node>
}
class newick.NodeFactory
class newick.Tree<Node, DefaultEdge> extends org.jgrapht.graph.DefaultDirectedGraph {
    +getFirstNode() : Node
}
class newick.TreeFactory {
    + nodeParser : NodeFactory

    +getTree(nwkFile : File) : Tree
    +parseTree(nwkFile : File, tree : Tree)
    +getOffspring(node : TreeNode, parent : Node, tree : Tree) : int
}

newick.TreeFactory ..> newick.Tree : << create >>
newick.TreeFactory ..> newick.NodeFactory
newick.NodeFactory ..> newick.Node : << create >>


@enduml
